Remove packaged library Simplify timestamp method Format fixes
Signed-off-by: Florian Mueller <f.l.o.mueller@web.de>